--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         }
 
         body {
+            margin: 0 auto;
             padding: 250px;
         }
     </style>
@@ -28,5 +29,6 @@
 <body>
     <img src="./img/farm.jpg" alt="">
 </body>
+
 
 </html>
