--- a/index.html
+++ b/index.html
@@ -13,22 +13,28 @@
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
     <style>
-        * {
+        body {
             margin: 0;
             padding: 0;
-            object-fit: cover;
         }
 
-        body {
+        .con {
+            width: 100%;
+
+        }
+
+        img {
             margin: 0 auto;
-            padding: 250px;
+            display: block;
         }
     </style>
 </head>
 
 <body>
-    <img src="./img/farm.jpg" alt="">
-</body>
+    <div class="con">
+        <img src="./img/farm.jpg" alt="">
 
+    </div>
+</body>
 
 </html>
